# teamail

./: .clang-tidy  .gitignore  README.md
cpp/: Action.cc  Action.h  CMakeLists.txt  EmscriptenUtil.cc  EmscriptenUtil.h  Fetch.h  FetchTest.cc  FetchWeb.cc  Fetcher.h  FetcherWeb.cc  FetcherWeb.h  Gapi.cc  Gapi.h  JsonUtil.h  Main.cc  Point.cc  Point.h  ResourceManager.cc  ResourceManager.h  State.cc  State.h  Util.cc  Util.h  WebMain.cc  WebTest.cc  action.h  build.sh  emscripten_util.h  main.cc  point.h  state.h  test.cc  util.cc
cpp/gestures/: bitset_32.h  gesture_detector.cc  gesture_detector.h  velocity_tracker.h  velocity_tracker_state.h
cpp/test/: ActionTest.cc  FetchMock.cc  GapiTest.cc  MockFetcher.h  UtilTest.cc
web/: .eslintrc  .eslintrc.js  .prettierrc.json  build.js  build.ts  package-lock.json  package.json  tsconfig.json
web/src/: App.tsx  Bindings.ts  Globals.d.ts  Module.d.ts
web/static/: index.html
web/teamail/: build.js  package-lock.json  package.json
web/teamail/public/: Bindings.js  Main.js  Main.wasm  index.html
web/teamail/src/: App.js  App.jsx  Bindings.js
web/teamail/static/: index.html
